# clawdhooks

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  claude-hooks-architecture-v2-enhanced.docx  claude-hooks-research-whitepaper.md  claude-hooks-substack-article.md  pyproject.toml
.claude/: settings.local.json
.fortress/: coverage-map.md  known-patterns.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-04-10-claude-hooks-phase1-core-sdk.md  2026-04-10-claude-hooks-phase2-budget-circuit.md  2026-04-10-claude-hooks-phase3-cache-routing.md  2026-04-10-claude-hooks-phase4-telemetry.md
examples/: content_moderation.py  data_pipeline.py  document_extraction.py  support_triage.py
src/claude_hooks/: __init__.py  budget.py  cache.py  context.py  exceptions.py  pii.py  router.py  telemetry.py  types.py
src/claude_hooks/adapters/: __init__.py  celery.py  django.py  fastapi.py
src/claude_hooks/providers/: __init__.py  claude.py
src/claudehooks/: __init__.py  budget.py  fallbacks.py  telemetry.py  types.py
src/claudehooks/adapters/: celery.py  django.py  fastapi.py
src/claudehooks/providers/: __init__.py  base.py
src/clawdhooks/: __init__.py  cache.py  circuit.py  exceptions.py  pii.py  router.py  telemetry.py  types.py
src/clawdhooks/adapters/: celery.py  django.py  fastapi.py
src/clawdhooks/providers/: openai.py
tests/: conftest.py  test_adapter_celery.py  test_adapter_django.py  test_adapter_fastapi.py  test_budget.py  test_cache.py  test_circuit.py  test_context.py  test_exceptions.py  test_fallbacks.py  test_hook.py  test_integration.py  test_pii.py  test_pii_integration.py  test_provider_base.py  test_provider_claude.py  test_provider_openai.py  test_router.py  test_router_phase2.py  test_router_phase3.py  test_router_phase4.py  test_telemetry.py  test_types.py
